Se genera una estructura donde alojar los items que el usuario va agregando al carrito. En proximas entregas este va a calcular total, subtotal, pagos en cuotas con porcentajes, etc.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
             </div>
         </div>
     </section>
-    <section id="contenedor">
-
-    </section>
+    <section id="contenedor"></section>
+    <section id="carrito"></section>
 </body>
 <script src="app.js"></script>
 </html>
