Se realizan cambios en el codigo para guardar en el local storage la informacion del cliente. Antes de guardarla pasa el objeto a JSON y cuando es utilizado nuevamente lo convierte a objeto de Js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -23,8 +24,9 @@
             </div>
         </div>
     </section>
-    <section id="contenedor"></section>
-    <section id="carrito"></section>
+    <section class ="contenedor" id="contenedor"></section>
+    <section class="contenedor" id="carrito"></section>
+    <section id="formasDePago"></section>
 </body>
 <script src="app.js"></script>
 </html>
